<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clInicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadInicio">

    <TextView
        android:id="@+id/tvCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/copyright_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/bienvenida_uteq"
        android:textSize="@dimen/text_size_welcome"
        app:layout_constraintBottom_toTopOf="@+id/lottieAnimacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoUteq" />

    <ImageView
        android:id="@+id/imgLogoUteq"
        android:layout_width="322dp"
        android:layout_height="136dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/desc_logo_uteq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_ini" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="159dp"
        android:layout_height="60dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:text="@string/btn_entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimacion" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimacion"
        android:layout_width="361dp"
        android:layout_height="278dp"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toTopOf="@+id/btnEntrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBienvenida"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/social" />

</androidx.constraintlayout.widget.ConstraintLayout>